--- a/Css/index.css
+++ b/Css/index.css
@@ -13,13 +13,15 @@ html body {
     
 }
 #navbarSupportedContent>ul>li:hover>a{
-    border-bottom: 1px solid #B68C70;
+    border-bottom: 1px solid #00B4D8;
     
 }
 .featured-image{
+  margin-top: 30px;
     height: auto;
     max-width: 80%;
     vertical-align: middle;
+    bottom: 0;
 }
 .entry-title{
     font-size: 80px;
@@ -160,6 +162,17 @@ a{
     letter-spacing: 1px;
     color: #00acc1;
   }
-
-  /* blog slider */
+.list-inline-item .btn-floating .fab:hover{
+  color: #f5f3f3;
+  transition: color 0.3s ease-in;
+}
   
+/* back to top */
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  color: white;
+  background-color: #00B4D8;
+}
