spotify-api eklenecek

--- a/Css/index.css
+++ b/Css/index.css
@@ -180,6 +180,24 @@ a{
 }
 .navbar{
   background-color: #03045E;
+  height: 80px;
+}
+
+@media only screen and (max-width: 767px) {
+	.navbar-nav {
+		text-align: center;
+		background: rgba(0, 0, 0, 0.5);
+	}
+	.carousel-caption {
+		bottom: 165px;
+	}
+	.carousel-caption h5 {
+		font-size: 17px;
+	}
+	.carousel-caption a {
+		padding: 10px 15px;
+		font-size: 15px;
+	}
 }
 
 
