--- a/Css/ozgecmis.css
+++ b/Css/ozgecmis.css
@@ -233,3 +233,66 @@ footer {
   color: #fff;
   background: #0f222d;
 }
+@media screen and (max-width: 1199px) {
+  .education .box-container .box {
+    width: 100%;
+  }
+
+  .education .box-container .box span {
+    padding: 0.5rem 2rem;
+  }
+}
+
+@media screen and (max-width: 991.98px) {
+  /* Navbar */
+  .menu {
+    display: block;
+    cursor: pointer;
+    z-index: 2;
+  }
+
+  .collapse {
+    position: relative;
+    right: 0px;
+    top: -115px;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    background-color: #0f222d;
+  }
+
+  .menuController {
+    display: flex !important;
+  }
+
+  .exitController {
+    display: flex !important;
+  }
+
+  .navbar-nav {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .nav-item {
+    margin-bottom: 15px;
+    font-size: 24px;
+  }
+
+  .collapse.animationIn {
+    animation: fadeInRight;
+    animation-duration: 0.5s;
+  }
+
+  /* /Navbar */
+}
+
+@media screen and (max-width: 767.98px) {
+  .education .box-container .box {
+    width: 100%;
+  }
+  .education .box-container .box span {
+    padding: 0.5rem 2.5rem;
+  }
+}
+
