--- a/Css/ozgecmis.css
+++ b/Css/ozgecmis.css
@@ -43,7 +43,7 @@ text-align: center;
 float: right;
 }
 .aside-profile img{
-    width: 90px;
+    width: 100px;
     height:100px;
     border-radius: 50%;
     margin-bottom: 10px;
@@ -296,3 +296,6 @@ footer {
   }
 }
 
+a{
+  
+}
